# gt

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
docs/: 001-architecture.md  002-strategies.md  003-cli-reference.md  004-configuration.md  005-security.md  006-cross-platform.md  007-migration.md  008-development.md  009-big-picture.md  010-backup-restore.md  011-bug-reports.md  012-error-handling.md  013-branching.md  014-releases.md  README.md
examples/: pagination_demo.rs
src/: error.rs  lib.rs  main.rs  util.rs
src/cli/: args.rs  interactive.rs  mod.rs  output.rs
src/cmd/: add.rs  clone.rs  commit.rs  config.rs  delete.rs  fix.rs  git_status.rs  import.rs  key.rs  list.rs  migrate.rs  mod.rs  push.rs  reset.rs  scan.rs  status.rs  update.rs  use_.rs
src/core/: identity.rs  mod.rs  path.rs  provider.rs  repo.rs  url.rs
src/io/: active_id.rs  backup.rs  git_config.rs  git_hooks.rs  mod.rs  schedule_config.rs  ssh_config.rs  ssh_key.rs  toml_config.rs
src/scan/: detector.rs  git_scanner.rs  mod.rs  report.rs  ssh_scanner.rs
src/strategy/: conditional.rs  mod.rs  ssh_alias.rs  url_rewrite.rs
tests/: add_command_test.rs  conditional_strategy_test.rs  safety_test.rs  ssh_alias_integration_test.rs  ssh_config_integration_test.rs  ssh_key_integration_test.rs
tests/common/: mod.rs
